Bug 675861 - Crash [@ AccIterator::GetNext()], r=tbsaunde